# react-native-quick-base64

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  babel.config.js  eslint.config.mjs  global.d.ts  package.json  prettier.config.js  react-native-quick-base64.podspec  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-android.yml  build-ios.yml  ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/hasNamespace/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativequickbase64/: QuickBase64JSIModulePackage.java  QuickBase64Module.java  QuickBase64Module.kt  QuickBase64Package.java  QuickBase64Package.kt
cpp/: QuickBase64Impl.cpp  QuickBase64Impl.h  base64.cpp  base64.h  react-native-quick-base64.cpp  react-native-quick-base64.h
example/: app.json  babel.config.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
example/android/: build.gradle  gradlew.bat  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: File.swift  Gemfile  Podfile
example/ios/QuickBase64Example/: AppDelegate.m  AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/QuickBase64Example.xcodeproj/: project.pbxproj
example/ios/QuickBase64Example.xcworkspace/: contents.xcworkspacedata
example/ios/QuickBase64ExampleTests/: QuickBase64ExampleTests.m
example/src/: App.tsx  Benchmarks.tsx  MochaRNAdapter.ts  TestItem.tsx  Tests.tsx  image.json  index.d.ts  types.ts  useRunTests.ts  useTestList.ts
example/src/tests/: basics.ts  big-data.ts  convert.ts  corrupt.ts  linebreaks.ts  node-crypto.ts  url-safe.ts  util.ts  zero.ts
ios/: OnLoad.mm  QuickBase64.h  QuickBase64.mm  QuickBase64Module.h  QuickBase64Module.mm
ios/QuickBase64.xcodeproj/: project.pbxproj
ios/QuickBase64.xcodeproj/xcshareddata/xcschemes/: QuickBase64.xcscheme
scripts/: bootstrap.js
src/: NativeQuickBase64.ts  index.ts  index.tsx
src/__tests__/: index.test.tsx
(+9 files in other folders)
